# forests

./: .coverage  README.md  REPRODUCE_PROMPT.md  matrix_test_results.csv  pyproject.toml  refactor.py  test_all_builder.py  test_matrix.py
examples/: 01_quickstart.py  02_forest_builder.py  03_rf_similarity_kernel.py  04_advanced_algorithms.py  05_statistical_forests.py  06_extras_survival_isolation.py
forests/: __init__.py  base.py  bernoulli_rf.py  boosting.py  builder.py  cart.py  conformal.py  constrained.py  deep_forest.py  embedding.py  extras.py  grf.py  kernel_forest.py  linear_tree.py  oblique.py  random_forest.py  regularized.py  rgf.py  rulefit.py  similarity.py  soft_tree.py  sporf.py
forests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_advanced_algorithms.py  test_base_coverage.py  test_builder.py  test_cart.py  test_extras.py  test_grf_kernel_conformal.py  test_missing_architectures.py  test_oblique_sporf.py  test_random_forest.py  test_regularized_constrained.py
