[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forests"
version = "0.1.0"
description = "A comprehensive Python library for decision trees and forests"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "forests contributors"}
]
requires-python = ">=3.9"
keywords = [
    "machine-learning", "decision-tree", "random-forest", "ensemble",
    "oblique-forest", "generalized-random-forest", "soft-decision-tree",
    "rotation-forest", "sporf", "rulefit"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "joblib>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "mutmut>=2.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["forests"]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true
